# ChangeLog for sys-boot/gnu-efi
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/gnu-efi/ChangeLog,v 1.13 2008/02/10 00:10:01 swegener Exp $

*gnu-efi-3.0e (08 Feb 2008)

  08 Feb 2008; Raúl Porcel <armin76@gentoo.org> -gnu-efi-3.0a.ebuild,
  +gnu-efi-3.0e.ebuild:
  Version bump, thanks to plasmaroo for testing

  13 Mar 2007; Raúl Porcel <armin76@gentoo.org> gnu-efi-3.0a-r1.ebuild:
  x86 stable

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  07 Apr 2005; <plasmaroo@gentoo.org> gnu-efi-3.0a-r1.ebuild:
  Stable -r1 on IA64.

*gnu-efi-3.0a-r1 (05 Apr 2005)

  05 Apr 2005; Mike Frysinger <vapier@gentoo.org>
  +files/gnu-efi-3.0a-lds-redhat.patch, +gnu-efi-3.0a-r1.ebuild:
  Update the linker script with a patch from redhat which supports newer
  versions of binutils.

  23 Jan 2005; <plasmaroo@gentoo.org> gnu-efi-3.0a.ebuild:
  Adding missing pcituils dependency; solves merge failures on bootstrapping.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> gnu-efi-3.0a.ebuild:
  virtual/glibc -> virtual/libc

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> gnu-efi-3.0a.ebuild:
  Add inherit eutils

  04 Mar 2004; <agriffis@gentoo.org> gnu-efi-3.0a.ebuild:
  stable on ia64

  21 Jan 2004; <agriffis@gentoo.org> gnu-efi-3.0a.ebuild:
  Move to /usr instead of root dir

*gnu-efi-3.0a (21 Jan 2004)

  21 Jan 2004; <agriffis@gentoo.org> gnu-efi-3.0a.ebuild,
  files/gnu-efi-3.0a-lds.patch:
  New ebuild for gnu-efi with patches from Debian. Thanks to Matt Anderson in
  bug 38875
